# minimal-flask-app

./: BUILD  MODULE.bazel  requirements.txt
myapp/: BUILD  apko.lock.json  apko.yaml  myapp.py
