module(name = "minimal-flask-app", version = "0.0.1")

bazel_dep(name = "rules_python", version = "0.37.2")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "aspect_rules_py", version = "0.8.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11",
)

# Container creation
bazel_dep(name = "rules_oci", version = "2.0.0")

# Required by py_layer.bzl
bazel_dep(name = "aspect_bazel_lib", version = "2.9.0")

# Install alpine images and packages (into containers)
bazel_dep(name = "rules_apko", version = "1.4.0")
apko = use_extension(
    "@rules_apko//apko:extensions.bzl",
    "apko",
    dev_dependency = True,
)
apko.translate_lock(
  name = "apko_lock",
  lock = "//myapp:apko.lock.json"
)
use_repo(apko, "apko_lock")
